# uefapi

./: .gitignore  Cargo.toml  qemu-debug.sh  qemu-release.sh
esp/EFI/BOOT/: BOOTX64.EFI
examples/: gfx-pbar.rs  gfx-text.rs  helloworld.rs  playground.rs
src/: gfx.rs  gfx2.rs  lib.rs
